--- a/settings.ini
+++ b/settings.ini
@@ -8,12 +8,19 @@ Password = password
 Folder = [Gmail]/All Mail
  
 ;Search = All
-Search =  (X-GM-RAW "to:tech@octo.com")
+Search = (X-GM-RAW "to:tech@octo.com")
  
- DataFormat = (UID X-GM-MSGID X-GM-THRID RFC822)
+DataFormat = (UID X-GM-MSGID X-GM-THRID RFC822)
 ;DataFormat = (X-GM-MSGID X-GM-THRID)
 
 
 [DB]
-Host = http://127.0.0.1:5984/
+; CouchDB
+;Host = http://127.0.0.1:5984/
+
+; MongoDB
+Host = 127.0.0.1
+Port = 27017
+Collection = emails
+
 Name = emails
