Created Grabber Python module

--- a/settings.ini
+++ b/settings.ini
@@ -9,12 +9,11 @@ Folder = [Gmail]/All Mail
  
 ;Search = All
 Search = (X-GM-RAW "to:tech@octo.com")
- 
-DataFormat = (UID X-GM-MSGID X-GM-THRID RFC822)
-;DataFormat = (X-GM-MSGID X-GM-THRID)
 
 
 [DB]
+Name = mail
+
 ; CouchDB
 ;Host = http://127.0.0.1:5984/
 
@@ -23,4 +22,3 @@ Host = 127.0.0.1
 Port = 27017
 Collection = emails
 
-Name = emails
